--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ button:focus{
 
 .btn:hover,
 .btn:focus {
-    outline: none;
     box-shadow: 0 3px 15px rgba(255,255,255, .35);
 }
 
@@ -3662,8 +3661,7 @@ border: 1px solid black;
 }
 
 .pack-item {
-    width: 370px;
-    height: 364px;
+    flex: 1;
     min-height: 364px;
     overflow: hidden;
     border-radius: 15px;
@@ -3942,3 +3940,262 @@ border: 1px solid black;
 }
 /* complex-analysis-seo! */
 /* SEO! */
+
+/* BLOG */
+/* blog */
+
+.blog {
+    position: relative;
+    background-image: url(images/blog-fon.png);
+}
+
+.container-blog {
+    padding: 200px 15px 78px 15px;
+}
+
+.blog-img {
+    position: absolute;
+    top: 123px;
+    left: 47%;
+}
+
+.blog-title {
+    margin-bottom: 37px;
+    font-family: 'Stolzl Book';
+    font-size: 40px;
+}
+
+.blog-list {
+    max-width:655px;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+.blog-item {
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    overflow: hidden;
+    border: 2px solid rgb(74, 59, 242); 
+    border-radius: 30px;
+    transition: all 0.25s
+    
+}
+
+.blog-link {
+    padding: 15px 50px;
+    font-family: 'Stolzl Book';
+    font-size: 17px;
+    line-height: 32px;
+    color: rgba(74, 59, 242, 255);
+    padding: 15px 50px;
+    cursor: pointer;
+}
+
+.blog-item:hover,
+.blog-item:focus {
+    border: none;
+    background-image: -moz-linear-gradient( 0deg, rgb(75,38,239) 0%, rgb(77,201,235) 100%);
+    background-image: -webkit-linear-gradient( 0deg, rgb(75,38,239) 0%, rgb(77,201,235) 100%);
+    background-image: -ms-linear-gradient( 0deg, rgb(75,38,239) 0%, rgb(77,201,235) 100%);
+    color: #fff;
+    
+}
+/* blog! */
+
+/* info-panel */
+
+.info-panel {
+    position: relative;
+    background: #f5f7f8;
+}
+
+.container-info-panel {
+    padding: 90px 15px;
+}
+
+.slider-info-panel {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.info-panel-item:nth-child(3n+1) .info-patel-top {
+    background-image: -moz-linear-gradient( 51deg, rgb(74,59,242) 0%, rgb(128,117,255) 100%);
+    background-image: -webkit-linear-gradient( 51deg, rgb(74,59,242) 0%, rgb(128,117,255) 100%);
+    background-image: -ms-linear-gradient( 51deg, rgb(74,59,242) 0%, rgb(128,117,255) 100%);
+}
+
+.info-panel-item:nth-child(3n+2) .info-patel-top {
+
+    background-image: -moz-linear-gradient( 51deg, rgb(242,214,59) 0%, rgb(239,230,86) 100%);
+    background-image: -webkit-linear-gradient( 51deg, rgb(242,214,59) 0%, rgb(239,230,86) 100%);
+    background-image: -ms-linear-gradient( 51deg, rgb(242,214,59) 0%, rgb(239,230,86) 100%);
+}
+
+.info-panel-item:nth-child(3n+3) .info-patel-top {
+    background-image: -moz-linear-gradient( 51deg, rgb(196,196,221) 0%, rgb(255,255,255) 100%);
+    background-image: -webkit-linear-gradient( 51deg, rgb(196,196,221) 0%, rgb(255,255,255) 100%);
+    background-image: -ms-linear-gradient( 51deg, rgb(196,196,221) 0%, rgb(255,255,255) 100%);
+}
+
+.info-panel-item:nth-child(3n+2) {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.info-panel-item {
+    margin-bottom:30px; 
+    background-color: #fff;
+    border-radius: 13px;
+    overflow: hidden;
+}
+
+
+.info-patel-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 60px;
+}
+
+.contant-info-panel {
+    padding: 25px;
+}
+
+.contant-info-panel-title {
+    
+    margin-bottom: 15px;
+    font-family: 'Stolzl Book';
+    font-size: 13px;
+}
+
+.contant-info-panel-text {
+    max-width: 311px;
+    display: block;
+    font-size: 12px;
+    line-height: 20px;
+    color: rgba(120, 120, 120, 255);
+}
+
+.info-patel-top-bottom {
+    display: flex;
+    margin-top: 70px;
+}
+
+.teg {
+    padding: 5px 10px;  
+    border-radius: 30px;
+    font-family: 'Stolzl Book';
+    font-size: 9px;
+}
+
+
+
+.teg-1 {
+    border:1px solid rgb(74, 59, 242);
+    background-color: rgba(255, 255, 255, 0);  
+    color: rgb(74, 59, 242);  
+}
+
+.teg-2 {
+    margin: 0 10px;
+    border:1px solid rgb(242, 205, 59);;
+    background-color: rgba(255, 255, 255, 0);    
+    color: rgb(242, 205, 59);
+}
+
+.views {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 28px;
+    font-size: 13px;
+    color: rgba(181, 181, 181, 255);
+}
+
+.views::before {
+    content: '';
+    width: 20px;
+    height: 13px;
+    position: absolute;;
+    left: 0px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-image: url(images/view-icon.png);
+
+}
+
+.info-panel-fon-1 {
+    position: absolute;
+    top: 0%;
+    left: -6%;
+}
+
+.info-panel-fon-2 {
+    position: absolute;
+    top: 5%;
+    right: 0;
+}
+
+/* info-panel! */
+
+/* pagination */
+
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.pagination-list {
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+
+.switch-pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+}
+
+.switch-pagination:first-child {
+    margin-right: 12px;
+}
+
+.switch-pagination:last-child {
+    margin-left: 12px;
+}
+
+.page {
+    margin: 0 7.5px;
+    font-family: 'Stolzl-Book';
+    font-size: 30px;
+    color: rgba(121, 121, 121, 255);    
+}
+
+.page-active {
+    font-size: 35px;
+    color: #4c57ee;
+}
+
+.dots {
+    font-size: 22px;
+}
+
+
+
+/* pagination! */
+
+
+  
+  
+
+
+
+/* BLOG! */
